<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffd9d9d9" />

    <RadioGroup
        android:id="@+id/tab_rdo_grp"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp">

        <RadioButton
            android:id="@+id/home_tab"
            style="@style/MainBottomTabBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_home"
            android:text="@string/index"
            android:textColor="@color/main_bottom_tab_btn_text_color"
            android:textSize="@dimen/textsize_10" />

        <RadioButton
            style="@style/MainBottomTabBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_plants"
            android:text="@string/plants"
            android:textColor="@color/main_bottom_tab_btn_text_color"
            android:textSize="@dimen/textsize_10" />

        <ImageView
            android:id="@+id/iv_release"
            style="@style/MainBottomTabBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/nav_fabu"
            android:textColor="@color/main_bottom_tab_btn_text_color"
            android:textSize="@dimen/textsize_10" />

        <!--<RadioButton-->
        <!--style="@style/MainBottomTabBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:button="@mipmap/nav_fabu"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@color/main_bottom_tab_btn_text_color"-->
        <!--android:textSize="@dimen/textsize_10" />-->

        <RadioButton
            style="@style/MainBottomTabBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_philanthropist"
            android:text="@string/philanthropist"
            android:textColor="@color/main_bottom_tab_btn_text_color"
            android:textSize="@dimen/textsize_10" />

        <RadioButton
            style="@style/MainBottomTabBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_mine"
            android:text="@string/mine"
            android:textColor="@color/main_bottom_tab_btn_text_color"
            android:textSize="@dimen/textsize_10" />

    </RadioGroup>

</LinearLayout>