<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColorHint="@color/color_999999"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/prompt_username"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:background="@color/color_999999"></View>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_old_psd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColorHint="@color/color_999999"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_old_psd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:gravity="center"
                android:hint="输入旧密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:background="@color/color_999999"></View>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_psd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColorHint="@color/color_999999"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_psd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:gravity="center"
                android:hint="输入新密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:background="@color/color_999999"></View>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_repeat_psd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColorHint="@color/color_999999"
            app:hintTextAppearance="@style/textInputStyle">

            <EditText
                android:id="@+id/et_repeat_psd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:gravity="center"
                android:hint="重复新密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:background="@color/color_999999"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColorHint="@color/color_999999"
                app:hintTextAppearance="@style/textInputStyle">

                <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/prompt_verify_code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_999999"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="38dp"
                android:background="@drawable/round_corner_gradient"
                android:clickable="true"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:text="@string/send_code"
                android:textColor="@color/clickable_white_grey"
                android:textSize="11sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:background="@color/white"></View>

        <TextView
            android:id="@+id/tv_go"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corner_gradient"
            android:gravity="center"
            android:text="完成"
            android:textColor="@color/clickable_white_grey"
            android:textSize="17sp" />


    </LinearLayout>

</LinearLayout>